--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "framer-motion": "^4.1.17",
+    "iso-country-currency": "^0.7.2",
+    "jodit-react": "^1.3.39",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
